--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <!-- here the phase you need -->
+            <phase>package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/docker</outputDirectory>
+              <resources>          
+                <resource>
+                  <directory>${basedir}/target/</directory>
+                  <filtering>false</filtering>
+                  <includes>
+                  	<include>spring-boot-web-jsp-1.0.war</include>
+                  </includes>
+                </resource>
+              </resources>              
+            </configuration>            
+          </execution>
+        </executions>
+      </plugin>
 		</plugins>
 	</build>
 </project>
