--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 # Alpine Linux with OpenJDK JRE
 FROM amazoncorretto:8
 # copy WAR into image
+ARG warfile
+RUN WGET $warfile
 COPY spring-boot-web-jsp-1.0.war /app.war 
 # run application with this command line 
 CMD ["/usr/bin/java", "-jar", "-Dspring.profiles.active=default", "/app.war"]
