--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,18 @@
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=829867751173.dkr.ecr.eu-west-1.amazonaws.com/applications/spring-boot-web-jsp
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+  install:
+    runtime-versions:
+      java: openjdk8
   build:
     commands:
-      - apt-get update -y
-      - apt-get install -y software-properties-common
-      - add-apt-repository ppa:openjdk-r/ppa
-      - apt-get update -y
-      - apt-get install -y openjdk-8-jdk
-      - apt-get install -y maven
       - echo Build started on `date`
-      - echo Building the Docker image...
-      - mvn clean install
+      - mvn test 
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo Pushing the Docker images...
+      - mvn package
 artifacts:
   files:
-    - imageDetail.json
+    - target/spring-boot-web-jsp-1.0.war
+  discard-paths: yes
