change buildspec to include imagedefinitions.json as artifact

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,9 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"spring-boot-web-jsp","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
   files:
-    - target/spring-boot-web-jsp-1.0.war
+    - imagedefinitions.json
   discard-paths: yes
