--- a/cloudformation.template
+++ b/cloudformation.template
@@ -2,7 +2,8 @@
   "AWSTemplateFormatVersion" : "2010-09-09",
   "Parameters" : {
     "applicationName" : {
-      "Type" : "String"
+      "Type" : "String",
+      "Default" : "applicationstack"
     }
   },
   "Outputs" : {
@@ -23,12 +24,30 @@
     },
     "VPC" : {
       "Type" : "AWS::EC2::VPC",
+      "Description" : "ALB VPC",
       "Properties" : {
-        "CidrBlock" : "10.0.0.0/16"
+        "CidrBlock" : "10.0.0.0/16",
+        "EnableDnsHostnames" : "true",
+        "EnableDnsSupport" : "true"
+      }
+    },
+    "internetGateway" : {
+      "Type" : "AWS::EC2::InternetGateway"
+    },
+    "AttachGateway" : {
+      "Type" : "AWS::EC2::VPCGatewayAttachment",
+      "Properties" : {
+        "VpcId" : {
+          "Ref" : "VPC"
+        },
+        "InternetGatewayId" : {
+          "Ref" : "internetGateway"
+        }
       }
     },
     "Subnet1" : {
       "Type" : "AWS::EC2::Subnet",
+      "Description" : "ALB VPC",
       "Properties" : {
         "AvailabilityZone" : "eu-west-1a",
         "CidrBlock" : "10.0.0.0/24",
@@ -39,9 +58,81 @@
     },
     "Subnet2" : {
       "Type" : "AWS::EC2::Subnet",
+      "Description" : "ALB VPC",
       "Properties" : {
-        "AvailabilityZone" : "eu-west-1a",
+        "AvailabilityZone" : "eu-west-1b",
         "CidrBlock" : "10.0.1.0/24",
+        "VpcId" : {
+          "Ref" : "VPC"
+        }
+      }
+    },
+    "routeTable" : {
+      "Type" : "AWS::EC2::RouteTable",
+      "Properties" : {
+        "VpcId" : {
+          "Ref" : "VPC"
+        }
+      }
+    },
+    "routeToInternet" : {
+      "Type" : "AWS::EC2::Route",
+      "DependsOn" : "internetGateway",
+      "Properties" : {
+        "RouteTableId" : {
+          "Ref" : "routeTable"
+        },
+        "DestinationCidrBlock" : "0.0.0.0/0",
+        "GatewayId" : {
+          "Ref" : "internetGateway"
+        }
+      }
+    },
+    "taskdefinition" : {
+      "Type" : "AWS::ECS::TaskDefinition",
+      "Properties" : {
+        "ContainerDefinitions" : [ {
+          "Name" : {
+            "Ref" : "applicationName"
+          },
+          "Image" : "829867751173.dkr.ecr.eu-west-1.amazonaws.com/applications/spring-boot-web-jsp:build-4c512481-7fe2-4054-8ae0-35e15d3401cf",
+          "Cpu" : "256",
+          "PortMappings" : [ {
+            "ContainerPort" : "8080",
+            "HostPort" : "8080"
+          } ],
+          "Memory" : "512",
+          "Essential" : "true"
+        } ]
+      }
+    },
+    "loadBalancer" : {
+      "Type" : "AWS::ElasticLoadBalancingV2::LoadBalancer",
+      "Properties" : {
+        "Name" : "FargateLoadBalancer",
+        "SecurityGroups" : [ {
+          "Ref" : "loadBalancerSecurityGroup"
+        } ],
+        "Scheme" : "internet-facing",
+        "Subnets" : [ {
+          "Ref" : "Subnet1"
+        }, {
+          "Ref" : "Subnet2"
+        } ],
+        "Type" : "application"
+      }
+    },
+    "loadBalancerSecurityGroup" : {
+      "Type" : "AWS::EC2::SecurityGroup",
+      "Properties" : {
+        "GroupDescription" : "Load Balancer Security Group",
+        "GroupName" : "LoadBalancerSecurityGroup",
+        "SecurityGroupIngress" : [ {
+          "CidrIp" : "0.0.0.0/0",
+          "FromPort" : 8080,
+          "IpProtocol" : "TCP",
+          "ToPort" : 8080
+        } ],
         "VpcId" : {
           "Ref" : "VPC"
         }
