create cloudformation ecs cluster

--- a/cloudformation.template
+++ b/cloudformation.template
@@ -163,6 +163,14 @@
           "Ref" : "VPC"
         }
       }
+    },
+    "Cluster" : {
+      "Type" : "AWS::ECS::Cluster",
+      "Properties" : {
+        "ClusterName" : {
+          "Ref" : "applicationName"
+        }
+      }
     }
   }
 }
