--- a/cloudformation.template
+++ b/cloudformation.template
@@ -91,18 +91,35 @@
     "taskdefinition" : {
       "Type" : "AWS::ECS::TaskDefinition",
       "Properties" : {
+        "ExecutionRoleArn" : "arn:aws:iam::829867751173:role/ecsTaskExecutionRole",
+        "RequiresCompatibilities" : ["FARGATE"],
+        "NetworkMode" : "awsvpc",
         "ContainerDefinitions" : [ {
           "Name" : {
             "Ref" : "applicationName"
           },
           "Image" : "829867751173.dkr.ecr.eu-west-1.amazonaws.com/applications/spring-boot-web-jsp:build-4c512481-7fe2-4054-8ae0-35e15d3401cf",
           "Cpu" : "256",
+          "Memory" : "0.5",
           "PortMappings" : [ {
             "ContainerPort" : "8080",
             "HostPort" : "8080"
           } ],
-          "Memory" : "512",
-          "Essential" : "true"
+          "Essential" : "true",
+          "HealthCheck" : {
+            "Retries" : "3",
+            "Command" : ["CMD-SHELL", "curl -f http://localhost:8080 || exit 1"],
+            "Timeout" : "60",
+            "Interval" : "60"
+          },
+          "LogConfiguration" : {
+            "LogDriver" : "awslogs",
+            "Options" : {
+              "awslogs-group" : { "Ref" : "applicationName"},
+              "awslogs-region" : "eu-west-1",
+              "awslogs-stream-prefix" : "ecs"
+            }
+          }
         } ]
       }
     },
@@ -178,7 +195,7 @@
         "Cluster" : {
           "Ref" : "cluster"
         },
-        "DesiredCount" : "1",
+        "DesiredCount" : "0",
         "TaskDefinition" : {
           "Ref" : "taskdefinition"
         }
