--- a/cloudformation.template
+++ b/cloudformation.template
@@ -92,15 +92,15 @@
       "Type" : "AWS::ECS::TaskDefinition",
       "Properties" : {
         "ExecutionRoleArn" : "arn:aws:iam::829867751173:role/ecsTaskExecutionRole",
-        "RequiresCompatibilities" : ["FARGATE"],
+        "RequiresCompatibilities" : [ "FARGATE" ],
         "NetworkMode" : "awsvpc",
+        "Cpu" : "256",
+        "Memory" : "512",
         "ContainerDefinitions" : [ {
           "Name" : {
             "Ref" : "applicationName"
           },
           "Image" : "829867751173.dkr.ecr.eu-west-1.amazonaws.com/applications/spring-boot-web-jsp:build-4c512481-7fe2-4054-8ae0-35e15d3401cf",
-          "Cpu" : "256",
-          "Memory" : "0.5",
           "PortMappings" : [ {
             "ContainerPort" : "8080",
             "HostPort" : "8080"
@@ -108,14 +108,16 @@
           "Essential" : "true",
           "HealthCheck" : {
             "Retries" : "3",
-            "Command" : ["CMD-SHELL", "curl -f http://localhost:8080 || exit 1"],
+            "Command" : [ "CMD-SHELL", "curl -f http://localhost:8080 || exit 1" ],
             "Timeout" : "60",
             "Interval" : "60"
           },
           "LogConfiguration" : {
             "LogDriver" : "awslogs",
             "Options" : {
-              "awslogs-group" : { "Ref" : "applicationName"},
+              "awslogs-group" : {
+                "Ref" : "applicationName"
+              },
               "awslogs-region" : "eu-west-1",
               "awslogs-stream-prefix" : "ecs"
             }
@@ -181,6 +183,22 @@
         }
       }
     },
+    "serviceSecurityGroup" : {
+      "Type" : "AWS::EC2::SecurityGroup",
+      "Properties" : {
+        "GroupDescription" : "Load Balancer Security Group",
+        "GroupName" : "LoadBalancerSecurityGroup",
+        "SecurityGroupIngress" : [ {
+          "CidrIp" : "0.0.0.0/0",
+          "FromPort" : 8080,
+          "IpProtocol" : "TCP",
+          "ToPort" : 8080
+        } ],
+        "VpcId" : {
+          "Ref" : "VPC"
+        }
+      }
+    },
     "cluster" : {
       "Type" : "AWS::ECS::Cluster",
       "Properties" : {
@@ -198,6 +216,19 @@
         "DesiredCount" : "0",
         "TaskDefinition" : {
           "Ref" : "taskdefinition"
+        },
+        "NetworkConfiguration" : {
+          "AwsvpcConfiguration" : {
+            "subnets" : [ {
+              "Ref" : "Subnet1"
+            }, {
+              "Ref" : "Subnet2"
+            } ],
+            "securityGroups" : [ {
+              "Ref" : "serviceSecurityGroup"
+            } ],
+            "assignPublicIp" : "DISABLED"
+          }
         }
       }
     }
