add dependency of target group to loadbalancer

--- a/cloudformation.template
+++ b/cloudformation.template
@@ -241,6 +241,7 @@
     },
     "targetGroup" : {
       "Type" : "AWS::ElasticLoadBalancingV2::TargetGroup",
+      "DependsOn" : "loadBalancer",
       "Properties" : {
         "Port" : "8080",
         "Protocol" : "HTTP",
