add load balancer dns name as output

--- a/cloudformation.template
+++ b/cloudformation.template
@@ -11,6 +11,11 @@
       "Value" : {
         "Ref" : "AWS::StackName"
       }
+    },
+    "URL" : {
+      "Value" : {
+        "Fn::GetAtt" : [ "loadBalancer", "DNSName" ]
+      }
     }
   },
   "Resources" : {
